# tdms-reader

./: CHANGES.txt  CMakeLists.txt  Makefile  README.txt  libtdms.pro
cmake/: tdmsConfig.cmake.in
include/: TdmsLeadIn.h  TdmsMetaData.h  TdmsObject.h  TdmsParser.h
src/: TdmsChannel.cpp  TdmsLeadIn.cpp  TdmsMetaData.cpp  TdmsObject.cpp  TdmsParser.cpp
tdmsreader/: CMakeLists.txt  Makefile  main.cpp  tdmsreader  tdmsreader.pro
